recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: not found: value snowside
	return {snowside}
                ^Koch:18: error: not found: value snowside
	snowside(levels,length);
        ^Koch:21: error: not found: value snowside
	snowside(levels,length);
        ^Koch:24: error: not found: value snowside
	snowside(levels,length);
        ^